--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,7 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
+html {
+  background-color: #FFF1F7;
+}
