--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,94 @@
 .page {
-  background-image: url(./images/cover-image-dark.png);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  font-family: var(--main-font-family), monospace;
+  line-height: var(--main-font-line-height);
+  font-size: var(--main-font-size);
+  color: var(--main-text-color);
+  background-color: var(--main-bg-color);
+  block-size: 100vh;
 }
 
 .header {
   position: relative;
-  block-size: 100vh;
-  min-block-size: 668px;
-  padding: var(--main-gap);
-  font-size: var(--main-text-size);
+  background-image: var(--main-bg-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
   justify-items: end;
+  min-block-size: 668px;
+  padding: 10px;
+}
+
+.header__rec {
+  position: absolute;
+  color: var(--accent-color);
+  inset-block-start: 10px;
+  inset-block-end: 38px;
+  line-height: 25px;
+  
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  top: 19%;
+  left: 135%;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+}
+
+.header__logo {
+  position: relative;
+  color: var(--header-color-logo);
+  font-weight: var(--main-font-weight-bold);
+  font-size: var(--title-font-size);
+  line-height: var(--title-font-line-height);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  justify-self: start;
+}
+
+.header__theme-menu-list {
+  list-style: none;
+  display: grid;
+  gap: 10px;
+}
+
+.title-decor {
+  color: var(--main-heading-color);
+  background-color: var(--accent-color);
+}
+
+.header__theme-menu-button {
+  text-transform: lowercase;
+  border: none;
+  color: var(--nav-color);
+  background-color: transparent;
+  padding: 0 13px;
+  position: relative;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--nav-color);
+}
+
+.header__theme-menu-button:active {
+  border: 1px solid var(--nav-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:focus {
+  border: 1px solid var(--nav-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+}
+
+.gallery-grid {
+  inline-size: 100%;
 }
