--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,36 @@
 */
 
 .page.theme_dark {
+
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+   /* Переменные текста */
+
+  --main-font-family: 'IBM Plex Mono';
+  --main-font-size: 18px;
+  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --title-font-line-height: clamp(5.981rem, 4.76rem + 5.213vw, 8.096rem);
+  --main-font-line-height: 23.4px;
+  --main-font-weight-bold: 700;
+  --main-font-weight-regular: 400;
+
+
+  /* Переменные цвета текста */
+
+  --accent-color: #FF0070;
+  --nav-color: #FF0070;
+  --main-text-color: #F1B2CE;
+  --heding-color-text: #000028;
+  --header-color-logo: #DB00FF;
+  --footer-color-logo: #DB00FF;
+  --decorated-zone-color: #FF0070;
+  
+  /* Переменные фона */
+
+  --main-heading-color: #000028;
+  --main-bg-color: #000028;
+  --main-bg-image: url(../images/cover-image-dark.png);
 }
