--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@
 .title-decor,
 .content__subtitle,
 .content__subtitle-recommendations {
-  color: var(--main-heading-color);
+  color: var(--heding-color-text);
   background-color: var(--accent-color);
   font-weight: var(--main-font-weight-bold);
 }
@@ -103,8 +103,8 @@
 .header__decorated-zone::before {
   content: '';
   position: absolute;
-  border-inline-end: 1px solid var(--accent-color);
-  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--decorated-zone-color);
+  border-block-start: 1px solid var(--decorated-zone-color);
   inset-inline-end: 10px;
   inset-block-start: 10px;
   height: 25px;
@@ -114,8 +114,8 @@
 .header__decorated-zone::after {
   content: '';
   position: absolute;
-  border-inline-start: 1px solid var(--accent-color);
-  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--decorated-zone-color);
+  border-block-end: 1px solid var(--decorated-zone-color);
   inset-inline-start: 10px;
   inset-block-end: 10px;
   height: 25px;
@@ -132,7 +132,11 @@
   font-size: var(--main-font-size);
   line-height: var(--main-font-line-height);
   font-weight: var(--main-font-weight-bold);
-  color: var(--accent-color);
+  color: var(--heding-color-text);
+}
+
+.content__subtitle-recommendations {
+  font-weight: var(--main-font-weight-regular);
 }
 
 .link-decorated {
@@ -216,6 +220,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  min-block-size: 668px;
 }
 
 .footer__logo {
@@ -225,8 +230,8 @@
 .footer__decorated-zone::before {
   content: '';
   position: absolute;
-  border-inline-start: 1px solid var(--accent-color);
-  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--decorated-zone-color);
+  border-block-end: 1px solid var(--decorated-zone-color);
   inset-inline-start: 10px;
   inset-block-end: 10px;
   height: 25px;
@@ -236,8 +241,8 @@
 .footer__decorated-zone::after {
   content: '';
   position: absolute;
-  border-inline-end: 1px solid var(--accent-color);
-  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--decorated-zone-color);
+  border-block-start: 1px solid var(--decorated-zone-color);
   inset-inline-end: 10px;
   inset-block-start: 10px;
   height: 25px;
