--- a/styles/dark.css
+++ b/styles/dark.css
@@ -20,6 +20,7 @@
   --main-font-line-height: 23.4px;
   --main-font-weight-bold: 700;
   --main-font-weight-regular: 400;
+  --display-rec: block;
 
 
   /* Переменные цвета текста */
