--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
 @media screen and (min-width: 768px) {
   .header {
     padding: 20px;
+    margin-block-end: 60px;
   }
 }
 
@@ -156,6 +157,12 @@
 
   .content {
     padding: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    .content {
+      padding: 20px;
+    }  
   }
 
 .content__title {
@@ -292,6 +299,43 @@
   block-size: 100%;
 }
 
+@media screen and (min-width: 768px) {
+  .section__gallery__grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-template-areas: 
+      "sun sun ice-cream"
+      "cassette books ice-cream"
+      "cassette street street";
+    gap: 20px;  
+  }
+  
+  .gallery-img:nth-of-type(n+1) {
+    grid-area: sun;
+  }
+
+  .gallery-img:nth-of-type(n+2) {
+    grid-area: ice-cream;
+  }
+  
+  .gallery-img:nth-of-type(n+3) {
+    grid-area: cassette;
+  }
+
+  .gallery-img:nth-of-type(n+4) {
+    grid-area: books;
+  }
+
+  .gallery-img:nth-of-type(n+5) {
+    grid-area: street;
+  }
+
+  .section__gallery {
+    gap: 20px;
+    margin-block-end: 60px;
+  }
+}
+
 
 /* Стили footer */
 
@@ -329,3 +373,15 @@
   height: 25px;
   width: 25px;
 }
+
+@media screen and (min-width: 768px) {
+  .footer__decorated-zone::before {
+    inset-inline-start: 20px;
+    inset-block-end: 20px;
+  }
+
+  .header__decorated-zone::after {
+    inset-inline-end: 20px;
+    inset-block-start: 20px;
+  }
+}  
