--- a/styles/style.css
+++ b/styles/style.css
@@ -29,8 +29,9 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    margin-block-end: 50px;
+    margin-block-end: 45px;
     padding-inline-end: 20px;
+    padding-block-start: 20px;
   }
 }
 
@@ -63,7 +64,6 @@
   }
 }
 
-
 .header__logo,
 .footer__logo {
   position: relative;
@@ -78,6 +78,17 @@
 .header__theme-menu-list {
   display: grid;
   gap: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .header__theme-menu {
+    align-self: start;
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+  }
 }
 
 .title-decor {
@@ -237,13 +248,24 @@
 @media screen and (min-width: 768px) {
 
   .section__what {
-    margin-block-end: 80px;
+    margin-block-end: 70px;
   }
 
   .section__what .content__title {
     width: 30%;
   }
-}  
+}
+
+@media screen and (min-width: 1024px) {
+  .section__what {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__what__text-block {
+    grid-row: 2/3;
+    align-self: baseline;
+  }
+}
 
 /* Стили секции как */
 
@@ -253,9 +275,12 @@
   margin-block-end: 50px;
 }
 
-.section__how__text-block {
-  display: grid;
-  gap: 10px;
+.content__subtitle{
+  margin-block-end: 20px;
+}
+
+.content__subtitle-recommendations {
+  margin-block-end: 10px;
 }
 
 @media screen and (min-width: 768px) {
