--- a/styles/style.css
+++ b/styles/style.css
@@ -241,13 +241,23 @@
   outline: 1px solid currentColor;
 }
 
-/* Стили секции почему */
-
-.section__why {
+.section__why,
+.section__what,
+.section__how {
   display: grid;
   gap: 20px;
   margin-block-end: 50px;
 }
+
+.section__why__text-block,
+.section__what__text-block,
+.section__how__text-block,
+.section__gallery__grid {
+  display: grid;
+  gap: 10px;
+}
+
+/* Стили секции почему */
 
 @media screen and (width > 375px) {
   .section__why {
@@ -261,23 +271,7 @@
   }
 }
 
-.section__why__text-block {
-  display: grid;
-  gap: 10px;
-}
-
 /* Стили секции что */
-
-.section__what {
-  display: grid;
-  gap: 20px;
-  margin-block-end: 50px;
-}
-
-.section__what__text-block {
-  display: grid;
-  gap: 10px;
-}
 
 @media screen and (375px < width < 1024px) {
   .section__what {
@@ -306,21 +300,11 @@
 
 /* Стили секции как */
 
-.section__how {
-  display: grid;
-  gap: 20px;
-  margin-block-end: 50px;
-}
 
 .section_how__article__text_block {
   display: flex;
   flex-direction: column;
   gap: 20px;
-}
-
-.section__how__text-block {
-  display: grid;
-  gap: 10px;
 }
 
 @media screen and (width > 375px) {
@@ -343,11 +327,6 @@
 
 .section__gallery {
   margin-block-end: 35px;
-  display: grid;
-  gap: 10px;
-}
-
-.section__gallery__grid {
   display: grid;
   gap: 10px;
 }
