--- a/styles/style.css
+++ b/styles/style.css
@@ -30,8 +30,7 @@
 @media screen and (width > 375px) {
   .header {
     margin-block-end: 45px;
-    padding-inline-end: 20px;
-    padding-block-start: 20px;
+    padding: 20px;
   }
 }
 
@@ -49,7 +48,7 @@
   }
 }
 
-@media screen and (768px < width) {
+@media screen and (width > 768px) {
   .header,
   .footer {
     min-block-size: 768px;
@@ -98,6 +97,19 @@
   text-shadow: 4px 4px 0 var(--accent-color);
   justify-self: start;
 }
+
+@media screen and (width > 375px) {
+  .header__logo {
+    left: -20px;
+  }
+}
+
+@media screen and (width > 768px) {
+  .header__logo {
+    text-shadow: 4px 4px 0 var(--title-shadow-color-desktop);
+  }
+}
+
 
 .header__theme-menu-list {
   display: grid;
@@ -176,12 +188,12 @@
 }
 
 @media screen and (width > 375px) {
-  .header__decorated_zone::before {
+  .decorated_zone::before {
     inset-inline-end: 20px;
     inset-block-start: 20px;
   }
 
-  .header__decorated_zone::after {
+  .decorated_zone::after {
     inset-inline-start: 20px;
     inset-block-end: 20px;
   }
@@ -326,7 +338,7 @@
 /* Стили галлереи */
 
 .section__gallery {
-  margin-block-end: 35px;
+  margin-block-end: 25px;
   display: grid;
   gap: 10px;
 }
@@ -371,7 +383,7 @@
 
   .section__gallery {
     gap: 20px;
-    margin-block-end: 60px;
+    margin-block-end: 50px;
   }
 }
 
@@ -388,4 +400,10 @@
 
 .footer__logo {
   text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+@media screen and (width > 768px) {
+  .footer__logo {
+    text-shadow: 4px 4px 0 var(--title-shadow-color-desktop);
+  }
 }
