--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,11 +9,12 @@
 
   --main-font-family: 'IBM Plex Mono';
   --main-font-size: 18px;
-  --font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  --title-font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
   --title-font-line-height: clamp(5.981rem, 4.76rem + 5.213vw, 8.096rem);
   --main-font-line-height: 23.4px;
   --main-font-weight-bold: 700;
   --main-font-weight-regular: 400;
+  --display-rec: block;
 
 
   /* Переменные цвета текста */
@@ -23,6 +24,7 @@
   --border-color-opacity: rgba(255, 0, 112, 0.4);
   --main-text-color: #F1B2CE;
   --title-text-color: #FF0070;
+  --title-shadow-color-desktop: #FF0070;
   --subtitle-text-color: #000028;
   --header-color-logo: #DB00FF;
   --footer-color-logo: #DB00FF;
