--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,6 @@
   }
 }
 
-
 .header__theme-menu-list {
   display: grid;
   gap: 10px;
@@ -127,7 +126,7 @@
   }
 }
 
-.title-decor {
+.header__title_decor {
   background-color: var(--header-title-bg-color);
   color: var(--subtitle-text-color);
   font-weight: var(--main-font-weight-bold);
@@ -203,68 +202,76 @@
   }
 }
 
-
 /* Стили main */
 
+.content {
+  padding: 10px;
+}
+
+@media screen and (width > 375px) {
   .content {
-    padding: 10px;
+    padding: 20px;
   }
+}
 
-  @media screen and (width > 375px) {
-    .content {
-      padding: 20px;
-    }
-  }
-
-.content__title {
+.section_why__title,
+.section_what__title,
+.section_how__title {
   font-size: var(--main-font-size);
   line-height: var(--main-font-line-height);
   font-weight: var(--main-font-weight-bold);
   color: var(--title-text-color);
 }
 
-.content__subtitle,
-.content__subtitle-recommendations {
+.section_why__subtitle,
+.section_what__subtitle,
+.section_how__subtitle,
+.section_how__subtitle_recommendations,
+.section_gallery__subtitle {
   color: var(--subtitle-text-color);
   background-color: var(--accent-color);
   font-weight: var(--main-font-weight-bold);
   font-size: var(--main-font-size);
 }
 
-.content__subtitle-recommendations {
+.section_how__subtitle_recommendations {
   font-weight: var(--main-font-weight-regular);
 }
 
-.link-decorated {
+.section_why__text_block__link_decorated,
+.section_how__text_block__link_decorated {
   text-shadow: 2px 2px 0px var(--accent-color);
   text-decoration: none;
   cursor: pointer;
 }
 
-.link-decorated:hover {
+.section_why__text_block__link_decorated:hover,
+.section_how__text_block__link_decorated:hover {
   border-block-end: 1px solid currentColor;
 }
 
-.link-decorated:focus {
+.section_why__text_block__link_decorated:focus,
+.section_how__text_block__link_decorated:focus {
   outline: none;
 }
 
-.link-decorated:focus-visible {
+.section_why__text_block__link_decorated:focus-visible,
+.section_how__text_block__link_decorated:focus-visible {
   outline: 1px solid currentColor;
 }
 
-.section__why,
-.section__what,
-.section__how {
+.section_why,
+.section_what,
+.section_how {
   display: grid;
   gap: 20px;
   margin-block-end: 50px;
 }
 
-.section__why__text-block,
-.section__what__text-block,
-.section__how__text-block,
-.section__gallery__grid {
+.section_why__text_block,
+.section_what__text_block,
+.section_how__text_block,
+.section_gallery__grid_list {
   display: grid;
   gap: 10px;
 }
@@ -272,13 +279,13 @@
 /* Стили секции почему */
 
 @media screen and (width > 375px) {
-  .section__why {
+  .section_why {
     grid-template-columns: 1fr 2fr;
     gap: 20px;
     margin-block-end: 80px;
   }
 
-  .section__why__text-block:last-of-type {
+  .section_why__text_block:last-of-type {
     grid-column: 2/3;
   }
 }
@@ -286,27 +293,27 @@
 /* Стили секции что */
 
 @media screen and (375px < width < 1024px) {
-  .section__what {
+  .section_what {
     margin-block-end: 70px;
   }
 
-  .section__what .content__title {
+  .section_what__title {
     width: 30%;
   }
 }
 
 @media screen and (width >= 1024px) {
-  .section__what {
+  .section_what {
     grid-template-columns: repeat(3, 1fr);
     margin-block-end: 80px;
   }
 
-  .section__what__text-block {
+  .section_what__text_block {
     grid-row: 2/3;
     align-self: baseline;
   }
 
-  .section__what .content__title {
+  .section_what__title {
     width: 100%;
   }
 }
@@ -314,7 +321,7 @@
 /* Стили секции как */
 
 
-.section_how__article__text_block {
+.section_how__article {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -322,29 +329,29 @@
 
 @media screen and (width > 375px) {
 
-  .section__how {
+  .section_how {
     grid-template-columns: 1fr 2fr;
     margin-block-end: 80px;
   }
 
-  .section__how .content__title {
+  .section_how__title {
     grid-column: 1/2;
   }
 
-  .section__how__text-block {
+  .section_how__text_block {
     grid-column: 2/3;
   }
 }
 
 /* Стили галлереи */
 
-.section__gallery {
+.section_gallery {
   margin-block-end: 25px;
   display: grid;
   gap: 10px;
 }
 
-.gallery-img {
+.section_gallery__img {
   inline-size: 100%;
   block-size: 100%;
   object-fit: cover;
@@ -352,7 +359,7 @@
 }
 
 @media screen and (width > 375px) {
-  .section__gallery__grid {
+  .section_gallery__grid_list {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     grid-template-areas: 
@@ -362,27 +369,27 @@
     gap: 20px;
   }
   
-  .gallery-grid-img:nth-of-type(n+1) {
+  .section_gallery__grid_item:nth-of-type(n+1) {
     grid-area: sun;
   }
 
-  .gallery-grid-img:nth-of-type(n+2) {
+  .section_gallery__grid_item:nth-of-type(n+2) {
     grid-area: ice-cream;
   }
   
-  .gallery-grid-img:nth-of-type(n+3) {
+  .section_gallery__grid_item:nth-of-type(n+3) {
     grid-area: cassette;
   }
 
-  .gallery-grid-img:nth-of-type(n+4) {
+  .section_gallery__grid_item:nth-of-type(n+4) {
     grid-area: books;
   }
 
-  .gallery-grid-img:nth-of-type(n+5) {
+  .section_gallery__grid_item:nth-of-type(n+5) {
     grid-area: street;
   }
 
-  .section__gallery {
+  .section_gallery {
     gap: 20px;
     margin-block-end: 50px;
   }
