--- a/styles/style.css
+++ b/styles/style.css
@@ -346,7 +346,7 @@
 /* Стили галлереи */
 
 .section_gallery {
-  margin-block-end: 25px;
+  margin-block-end: 20px;
   display: grid;
   gap: 10px;
 }
@@ -391,7 +391,7 @@
 
   .section_gallery {
     gap: 20px;
-    margin-block-end: 50px;
+    margin-block-end: 40px;
   }
 }
 
@@ -407,11 +407,11 @@
 }
 
 .footer__logo {
-  text-shadow: 2px 2px 0px var(--accent-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 @media screen and (width > 768px) {
   .footer__logo {
-    text-shadow: 4px 4px 0 var(--title-shadow-color-desktop);
+    text-shadow: 2px 2px 0 var(--title-shadow-color-desktop);
   }
 }
